--- a/style.css
+++ b/style.css
@@ -29,12 +29,37 @@ body.dark-mode .nav-link:hover {
 }
 
 /* Apply Quicksand font to all headings */
-h1, h2, h3, h4, h5, h6 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   font-family: "Quicksand", sans-serif;
 }
 
+h1,
+h2 {
+  font-weight: 600;
+}
+
+h1,
+h3 {
+  color: var(--pri-col);
+}
+
+h2,
+h4,
+h5,
+h6 {
+  color: var(--sec-col);
+}
+
 /* Apply Quicksand font to menu items */
-.navbar-nav .nav-link, .navbar-toggler, #dark-mode-toggle {
+.navbar-nav .nav-link,
+.navbar-toggler,
+#dark-mode-toggle,
+#dark-mode-toggle-mobile {
   font-family: "Quicksand", sans-serif;
   text-transform: uppercase;
   text-decoration: none;
@@ -44,7 +69,10 @@ h1, h2, h3, h4, h5, h6 {
   text-align: center;
 }
 
-.nav-link:hover, .navbar-toggler:hover, #dark-mode-toggle:hover {
+.nav-link:hover,
+.navbar-toggler:hover,
+#dark-mode-toggle:hover,
+#dark-mode-toggle-mobile:hover {
   color: var(--sec-col);
   transform: scale(1.1);
 }
@@ -52,13 +80,13 @@ h1, h2, h3, h4, h5, h6 {
 /* Transparent navbar for front page */
 .navbar-transparent {
   background-color: transparent;
-  transition: background-color 1.5s, height 1.5s ease;
+  transition: background-color 1.5s, height 1.5s;
 }
 
 /* Solid navbar for all pages */
 .navbar-solid {
   background-color: #ffffff;
-  transition: height 1.5s ease;
+  transition: height 1.5s;
 }
 
 /* Solid navbar on scroll */
@@ -67,19 +95,33 @@ h1, h2, h3, h4, h5, h6 {
   height: 70px !important;
 }
 
+.navbar-left,
+.navbar-right {
+  flex: 1;
+}
+
+.navbar-logo {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .logo {
-  height: 120px; /* Initial height */
-  transition: height 1.5s ease; /* Smooth transition */
+  height: 18vh; /* Initial height */
+  transition: height 1.5s; /* Smooth transition */
 }
 
 @media (max-width: 992px) {
   .navbar-nav {
     background-color: rgba(255, 255, 255, 0.8);
   }
-
-  .logo {
-    height: 100px; /* Adjusted height for mobile */
+  .navbar-toggler,
+  #dark-mode-icon-mobile {
+    font-size: 32px;
   }
+}
+#mobile-navbar {
+  font-size: 24px;
 }
 
 /* HERO SECTION */
@@ -116,28 +158,64 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .hero-content {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
   text-align: center;
-}
-
-.hero-content h1 {
-  font-size: 3rem;
-  margin: 0;
-}
-
-.hero-content p {
-  font-size: 1.5rem;
-  margin: 10px 0 0;
-}
-
-.tagline {
-  text-align: center;
-  font-size: 2rem;
-  text-transform: uppercase;
+  font-weight: bold;
+  margin: 150px 100px 0px;
 }
 
 .text-line {
-  display: block;
-  opacity: 1;
-  line-height: 0;
-  transform-origin: center;
+  text-align: center;
+  text-transform: uppercase;
+  font-weight: bold;
+  line-height: 0.8;
+  /* transform-origin: center; */
+}
+
+.hero-button-row {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+.hero-button-row button {
+  margin: 0 5px;
+}
+
+button {
+  font-family: "Quicksand", sans-serif;
+  font-weight: 700;
+  background-color: var(--sec-col); /* Button background color */
+  color: white; /* Button text color */
+  border: none;
+  padding: 10px 16px;
+  font-size: 1rem;
+  cursor: pointer;
+  border-radius: 5px; /* Rounded corners */
+  transition: background-color 0.3s, transform 0.3s;
+}
+
+@media (max-width: 992px) {
+  .hero-button-row {
+    /* display: flex; */
+    flex-direction: column; /* Display buttons as a column */
+  }
+  .hero-button-row button {
+    margin: 5px 0;
+  }
+}
+
+button:hover {
+  background-color: var(--pri-col); /* Darker shade on hover */
+  transform: scale(1.03); /* Slightly larger on hover */
+}
+
+button:active {
+  background-color: #004080; /* Even darker shade when clicked */
+  transform: scale(1); /* Reset size when clicked */
 }
