--- a/style.css
+++ b/style.css
@@ -11,6 +11,10 @@
   --dark-hover: #ffffff;
 }
 
+body {
+  margin: 0;
+}
+
 body.dark-mode {
   background-color: var(--dark-bg);
   color: var(--dark-text);
@@ -20,7 +24,7 @@ body.dark-mode .navbar {
   background-color: var(--dark-navbar) !important;
 }
 
-body.dark-mode .navbar-nav .nav-link {
+body.dark-mode .nav-menu .nav-link {
   color: var(--dark-navlink);
 }
 
@@ -55,84 +59,189 @@ h6 {
   color: var(--sec-col);
 }
 
-/* Apply Quicksand font to menu items */
-.navbar-nav .nav-link,
-.navbar-toggler,
-#dark-mode-toggle,
-#dark-mode-toggle-mobile {
-  font-family: "Quicksand", sans-serif;
-  text-transform: uppercase;
-  text-decoration: none;
-  font-weight: bold;
+/* Mobile Menu Toggle Styling */
+.mobile-menu-toggle {
+  display: none;
   color: var(--pri-col);
-  transition: all 0.5s;
-  text-align: center;
+  cursor: pointer;
+  font-size: 5vh;
 }
 
-.nav-link:hover,
-.navbar-toggler:hover,
-#dark-mode-toggle:hover,
-#dark-mode-toggle-mobile:hover {
-  color: var(--sec-col);
-  transform: scale(1.1);
+/* Navbar Styling */
+.navbar {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  z-index: 1000;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 1vh 0;
 }
 
-/* Transparent navbar for front page */
-.navbar-transparent {
-  background-color: transparent;
-  transition: background-color 1.5s, height 1.5s;
-}
-
-/* Solid navbar for all pages */
-.navbar-solid {
-  background-color: #ffffff;
-  transition: height 1.5s;
-}
-
-/* Solid navbar on scroll */
-.navbar-solid-scrolled {
-  background-color: #ffffff !important;
-  height: 70px !important;
-}
-
-.navbar-left,
-.navbar-right {
+.nav-menu-container {
   flex: 1;
+  display: flex;
+  justify-content: center;
+  padding: 0 2vw;
+}
+
+.nav-menu-left-container {
+  justify-content: flex-end;
+}
+
+.nav-menu-right-container {
+  justify-content: flex-start;
+}
+
+.nav-menu {
+  display: flex;
+  align-items: center;
+  list-style: none;
+  padding: 0;
+  margin: 0;
 }
 
 .navbar-logo {
+  flex-shrink: 0;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
 .logo {
-  height: 18vh; /* Initial height */
-  transition: height 1.5s; /* Smooth transition */
+  height: 15vh
 }
 
-@media (max-width: 992px) {
-  .navbar-nav {
-    background-color: rgba(255, 255, 255, 0.8);
+/* .logo {
+  height: 100%;
+} */
+
+.menu-item {
+  font-family: "Quicksand", sans-serif;
+  text-transform: uppercase;
+  font-weight: bold;
+  text-align: center;
+  padding: 0 6px;
+}
+
+.menu-item a {
+  text-decoration: none;
+  color: var(--pri-col);
+  transition: all 0.3s;
+}
+
+.menu-item a:hover {
+  color: var(--sec-col);
+}
+
+/* Transparent navbar for front page */
+.navbar-transparent {
+  background-image: linear-gradient(var(--light-col), transparent);
+  transition: background-color 1.5s;
+}
+
+/* Solid navbar for all pages */
+.navbar-solid {
+  background-color: #ffffff;
+}
+
+/* Solid navbar on scroll */
+.navbar-solid-scrolled {
+  background-color: #ffffff !important;
+}
+
+/* Dropdown Menu Styling */
+.nav-menu li {
+  position: relative;
+}
+
+.nav-menu li ul {
+  display: block;
+  position: absolute;
+  top: 100%;
+  left: -50%;
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  width: 200%;
+  background-color: #fff;
+  opacity: 0;
+  transition: opacity 0.3s; /* Add transitions */
+}
+
+.nav-menu li ul li {
+  text-align: center;
+  text-transform: none;
+  padding: 10px 4px;
+}
+
+.nav-menu li ul li a {
+  padding: 10px;
+}
+
+.nav-menu li:hover ul {
+  opacity: 1;
+}
+
+/* Mobile Menu Styling */
+.mobile-menu {
+  display: none;
+  z-index: 9999;
+  background-color: #ffffff;
+  padding: 10px;
+  position: absolute;
+  top: 15vh;
+  left: 0;
+  width: 100%;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.15);
+}
+
+.mobile-nav-menu {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+.mobile-nav-menu .menu-item {
+  padding: 10px;
+}
+
+@media (max-width: 768px) {
+  .nav-menu {
+    display: none; /* Hide desktop menu */
   }
-  .navbar-toggler,
-  #dark-mode-icon-mobile {
-    font-size: 32px;
+  .mobile-menu-toggle {
+    display: block; /* Show toggle button */
+  }
+  .nav-menu-left-container {
+    justify-content: flex-start;
+    padding: 0 4vw;
+  }
+  .navbar-logo {
+    /* justify-content: flex-start; */
   }
 }
-#mobile-navbar {
-  font-size: 24px;
-}
+
+
 
 /* HERO SECTION */
 
 .hero {
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
   position: relative;
   width: 100%;
   height: 100vh;
+  overflow: hidden;
+}
+
+.hero-video {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  z-index: -1;
 }
 
 .hero-overlay {
@@ -142,9 +251,22 @@ h6 {
   width: 100%;
   height: 100%;
   background-image: linear-gradient(#eeeeeeb3 90%, var(--light-col));
+  z-index: 0;
+}
+
+.hero-content {
+  position: relative;
+  z-index: 1;
+  /* width: 100%; */
+  height: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-direction: column;
+  gap: 16px;
+  text-align: center;
+  font-weight: bold;
+  margin: 0px 10vw;
 }
 
 .hero-down {
@@ -157,21 +279,11 @@ h6 {
   cursor: pointer;
 }
 
-.hero-content {
-  display: flex;
-  flex-direction: column;
-  gap: 20px;
-  text-align: center;
-  font-weight: bold;
-  margin: 150px 100px 0px;
-}
-
 .text-line {
   text-align: center;
   text-transform: uppercase;
   font-weight: bold;
   line-height: 0.8;
-  /* transform-origin: center; */
 }
 
 .hero-button-row {
@@ -194,7 +306,6 @@ button {
   color: white; /* Button text color */
   border: none;
   padding: 10px 16px;
-  font-size: 1rem;
   cursor: pointer;
   border-radius: 5px; /* Rounded corners */
   transition: background-color 0.3s, transform 0.3s;
@@ -203,7 +314,7 @@ button {
 @media (max-width: 992px) {
   .hero-button-row {
     /* display: flex; */
-    flex-direction: column; /* Display buttons as a column */
+    flex-direction: column;
   }
   .hero-button-row button {
     margin: 5px 0;
