--- a/style.css
+++ b/style.css
@@ -13,7 +13,8 @@
 
 body {
   margin: 0;
-  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  /* font-family: 'Open Sans', sans-serif; */
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 body.dark-mode {
@@ -134,7 +135,6 @@ h4, button {
 
 .menu-item {
   font-family: "Quicksand", sans-serif;
-  text-transform: uppercase;
   font-weight: bold;
   text-align: center;
   padding: 0 6px;
@@ -142,6 +142,7 @@ h4, button {
 
 .menu-item a {
   text-decoration: none;
+  text-transform: uppercase;
   color: var(--pri-col);
   transition: all 0.3s;
 }
@@ -288,7 +289,8 @@ h4, button {
   left: 0;
   width: 100%;
   height: 100%;
-  background-image: linear-gradient(#eeeeeeb3 90%, var(--light-col));
+  /* background-image: linear-gradient(#eeeeeeb3 90%, var(--light-col)); */
+  background-color: #eeeeeeb3;
   z-index: 0;
 }
 
@@ -306,16 +308,6 @@ h4, button {
   font-weight: bold;
   margin: 0px 10vw;
 }
-
-/* .hero-down {
-  position: absolute;
-  top: 90%;
-  fill: var(--pri-col);
-  opacity: 50%;
-  width: 8vh;
-  height: 8vh;
-  cursor: pointer;
-} */
 
 .text-line {
   text-align: center;
@@ -337,18 +329,6 @@ h4, button {
   margin: 0 6px;
 }
 
-button {
-  font-family: "Quicksand", sans-serif;
-  font-weight: 700;
-  background-color: var(--sec-col); /* Button background color */
-  color: white; /* Button text color */
-  border: none;
-  padding: 10px 16px;
-  cursor: pointer;
-  border-radius: 5px; /* Rounded corners */
-  transition: background-color 0.3s, transform 0.3s;
-}
-
 @media (max-width: 768px) {
   .hero-button-row {
     /* display: flex; */
@@ -358,13 +338,85 @@ button {
     margin: 6px 0;
   }
 }
-
-button:hover {
-  background-color: var(--pri-col); /* Darker shade on hover */
-  transform: scale(1.03); /* Slightly larger on hover */
+.divider {
+  display: flex;
+  width: 100%;
+  height: 15vh;
+  position: absolute;
+  /* z-index: 10000; */
+  bottom: 0%;
 }
 
-button:active {
-  background-color: #004080; /* Even darker shade when clicked */
-  transform: scale(1); /* Reset size when clicked */
+.divider-primary {
+  fill: #0a3e6a;
 }
+
+.divider-secondary {
+  fill: #1d70b7;
+}
+.divider-light {
+  fill: #a6bfd1;
+}
+.divider polygon {
+  filter: drop-shadow(rgba(0, 0, 0, 0.5) 0 0 5px);
+}
+
+.home-description {
+  margin: 0;
+  color: white;
+  background-color: var(--sec-col);
+  text-align: center;
+  font-size: 24px;
+  border: none;
+  padding: 10vh 15vw;
+}
+
+/* Container for the scrolling area */
+.elvanto-calendar-events {
+  display: flex;
+  overflow-x: auto;
+  scroll-snap-type: x mandatory;
+  -webkit-overflow-scrolling: touch;
+  gap: 20px; /* Set the gap between the cards */
+  padding: 10px;
+}
+
+/* Each card */
+.elvanto-calendar-events-ul {
+  display: flex;
+  padding: 0;
+  margin: 0;
+  list-style: none;
+  gap: 20px;
+}
+
+.elvanto-calendar-events-ul li a {
+  scroll-snap-align: start;
+  border-radius: 20px;
+  width: 30vw;
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+}
+
+.elvanto-calendar-events-pic {
+  width: 30px; /* Set width of the image */
+  height: 30px; /* Set height of the image */
+  margin-bottom: 15px; /* Space between the image and title */
+}
+
+.elvanto-calendar-events-title {
+  font-size: 1.2em;
+  font-weight: bold;
+  margin: 10px 0; /* Space above and below the title */
+}
+
+.elvanto-calendar-events-date {
+  font-size: 1em;
+  color: #666;
+  margin: 10px 0; /* Space above and below the date */
+}
+
+
