--- a/style.css
+++ b/style.css
@@ -422,37 +422,30 @@ button {
   width: 100%;
   height: 100%;
   z-index: 0;
-  background-color: rgba(
-    0,
-    0,
-    0,
-    0.5
-  ); /* Change the overlay color and opacity here */
+  background-color: black;
+  /* background-color: var(--pri-col); */
   opacity: 0.6;
   transition: opacity 0.3s ease;
 }
 
 .grid-item:hover .overlay {
-  opacity: 1;
+  opacity: 0.7;
 }
 
 .grid-item .content {
-  /* position: absolute; */
-  /* top: 0%; */
   display: flex;
   flex-direction: column;
   justify-content: center;
   width: 100%;
   height: 100%;
   box-sizing: border-box;
-  color: #fff;
+  text-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
   z-index: 1;
   padding: 10%;
 }
 
 .grid-item .title {
   z-index: inherit;
-  /* margin-bottom: 10px; */
 }
 
 .grid-item .title h2 {
@@ -462,6 +455,7 @@ button {
 }
 
 .grid-item .description {
+  color: white;
   text-align: start;
   z-index: inherit;
   font-size: 16px;
@@ -493,13 +487,19 @@ button {
   position: relative;
   z-index: 2;
   box-sizing: border-box;
-  padding: 5vh 20px;
   margin: auto;
   max-width: 600px;
   font-size: larger;
   width: 100%;
   color: white;
-  /* height: 100%; */
+}
+
+.home-description {
+  padding: 5vh 20px;
+}
+
+.header-content {
+  padding: 15vh 20px;
 }
 
 /* Page Header */
@@ -510,7 +510,7 @@ button {
 }
 
 .page-content {
-  max-width: 800px;
+  max-width: 1024px;
   padding: 0 20px;
   margin: auto;
 }
@@ -551,6 +551,8 @@ button {
   text-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
   margin-top: 0;
 }
+
+/* Footer */
 
 .footer {
   background-color: var(--pri-col);
