--- a/style.css
+++ b/style.css
@@ -11,73 +11,14 @@ License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
 */
 
-:root {
-  --pri-col: #0a3e6a;
-  --sec-col: #1d70b7;
-  --light-col: #eeeeee;
-  --dark-col: #333333;
-}
-
 body {
   margin: 0;
-  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-  text-align: center;
-  font-size: large;
-  background-color: var(--light-col);
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
-}
-
-/* Apply Quicksand font to all headings */
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  font-family: "Quicksand", sans-serif;
-}
-
-h1,
-h2 {
-  font-weight: 600;
-}
-
-h1,
-h3 {
-  color: var(--pri-col);
-}
-
-h2,
-h4,
-h5,
-h6 {
-  color: var(--sec-col);
-}
-
-h1 {
-  /* font-size: 36px; */
-  font-size: calc(36px + 0.2vw);
-  margin-top: 0;
-}
-
-h2 {
-  /* font-size: 30px; */
-  font-size: calc(30px + 0.2vw);
-}
-
-h3 {
-  /* font-size: 24px; */
-  font-size: calc(24px + 0.2vw);
-}
-
-h4,
-button {
-  /* font-size: 18px; */
-  font-size: calc(18px + 0.2vw);
+/* Custom padding for main page content */
+.content-padding {
+  padding-top: 17vh;
+  margin: 0;
 }
 
 /* Navbar Styling */
@@ -133,7 +74,7 @@ button {
 }
 
 .menu-item {
-  font-family: "Quicksand", sans-serif;
+  font-family: var(--wp--preset--font-family--headings);
   font-weight: bold;
   padding: 0 6px;
 }
@@ -141,29 +82,31 @@ button {
 .menu-item a {
   text-decoration: none;
   text-transform: uppercase;
-  color: var(--pri-col);
+  color: var(--wp--preset--color--primary);
   transition: all 0.3s;
 }
 
 .menu-item a:hover {
-  color: var(--sec-col);
+  color: var(--wp--preset--color--secondary);
 }
 
 /* Transparent navbar for front page */
 .navbar-transparent {
-  background-image: linear-gradient(var(--light-col), transparent);
+  /* background-image: linear-gradient(var(--wp--preset--color--light), transparent); */
+  background-color: transparent;
   transition: background-color 1.5s;
 }
 
 /* Solid navbar for all pages */
 .navbar-solid {
-  background-color: #ffffff;
+  background-color: #ffffff !important;
 }
 
 /* Solid navbar on scroll */
 .navbar-solid-scrolled {
   background-color: #ffffff !important;
 }
+
 
 /* Dropdown Menu Styling */
 .nav-menu li {
@@ -215,7 +158,7 @@ button {
 }
 
 .mobile-menu-toggle path {
-  fill: var(--pri-col);
+  fill: var(--wp--preset--color--primary);
 }
 
 /* Mobile Menu Styling */
@@ -272,12 +215,12 @@ button {
 
   .nav-menu-left-container {
     justify-content: flex-start;
-    padding: 0 0 0 4vw;
+    /* padding: 0 0 0 4vw; */
   }
 
   .nav-menu-right-container {
     justify-content: flex-end;
-    padding: 0 4vw 0 0;
+    /* padding: 0 4vw 0 0; */
   }
 }
 
@@ -291,69 +234,34 @@ button {
   overflow: hidden;
 }
 
-.hero-video {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  z-index: -1;
-}
-
-.hero-overlay {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: #eeeeeeaa;
-  z-index: 0;
-}
-
 .hero-content {
-  position: relative;
-  z-index: 1;
-  width: 100%;
-  height: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  font-weight: bold;
-  box-sizing: border-box;
   gap: 5vh;
-  padding: 0px 20px;
-  margin: auto;
-  max-width: 800px;
 }
 
-.hero-content>* {
+.hero-content > * {
   margin: 0;
 }
 
-.hero-tagline>* {
+.hero-animation > * {
   margin: 0;
 }
 
 .text-line {
   text-transform: uppercase;
+  text-align: center !important;
 }
 
-.hero-button-row {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  gap: 10px;
-  list-style: none;
-  margin: 0;
-  padding: 0;
+#line1.text-line,
+#line3.text-line {
+  color: var(--wp--preset--color--secondary);
 }
 
-@media (max-width: 768px) {
-  .hero-button-row {
-    flex-direction: column;
-  }
+#line2.text-line {
+  color: var(--wp--preset--color--primary);
 }
 
 /* DIVIDER */
@@ -363,278 +271,26 @@ button {
   width: 100%;
   height: 15vh;
   position: absolute;
-  bottom: -1px;
+  bottom: 0;
+  z-index: 10;
 }
 
 .divider-primary {
-  fill: #0a3e6a;
+  fill: var(--wp--preset--color--primary);
 }
 
 .divider-secondary {
-  fill: #1d70b7;
+  fill: var(--wp--preset--color--secondary);
 }
 
 .divider-light {
-  fill: #a6bfd1;
+  fill: var(--wp--preset--color--accent-1);
 }
 
 .divider polygon {
   filter: drop-shadow(rgba(0, 0, 0, 0.5) 0 0 5px);
 }
 
-/* GRID */
-
-.grid-container {
-  display: grid;
-  gap: 0;
-}
-
-@media screen and (min-width: 1024px) {
-  .grid-container {
-    grid-template-columns: repeat(3,
-        1fr) !important;
-  }
-}
-
-@media screen and (max-width: 1023px) {
-  .grid-container {
-    grid-template-columns: repeat(2,
-        1fr) !important;
-  }
-}
-
-@media screen and (max-width: 768px) {
-  .grid-item .description {
-    display: none;
-  }
-
-  .grid-item .title h2 {
-    text-align: center !important;
-    font-size: large;
-  }
-}
-
-.grid-item {
-  position: relative;
-  overflow: hidden;
-  width: 100%;
-  aspect-ratio: 16/9;
-}
-
-.grid-item img {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  z-index: -1;
-}
-
-.grid-item .overlay {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  z-index: 0;
-  background-color: black;
-  opacity: 0.6;
-  transition: opacity 0.3s ease;
-}
-
-.grid-item:hover .overlay {
-  opacity: 0.7;
-}
-
-.grid-item .content {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  width: 100%;
-  height: 100%;
-  box-sizing: border-box;
+.text-shadow {
   text-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
-  z-index: 1;
-  padding: 10%;
-}
-
-.grid-item .title {
-  z-index: inherit;
-}
-
-.grid-item .title h2 {
-  color: white;
-  margin: 0;
-  text-align: start;
-}
-
-.grid-item .description {
-  color: white;
-  text-align: start;
-  z-index: inherit;
-  font-size: 16px;
-}
-
-@media screen and (max-width: 768px) {
-  .grid-container {
-    grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
-  }
-}
-
-/* All Page Descriptions */
-
-.home-description-container,
-.full-width-header .header-container {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  height: 100%;
-  /* margin: 0; */
-}
-
-.home-description-container {
-  background-color: var(--sec-col);
-}
-
-.home-description,
-.header-content {
-  position: relative;
-  z-index: 2;
-  box-sizing: border-box;
-  margin: auto;
-  max-width: 600px;
-  font-size: x-large;
-  width: 100%;
-  color: white;
-}
-
-.home-description a,
-.header-content a {
-  color: var(--light-col);
-}
-
-.home-description {
-  padding: 5vh 20px;
-}
-
-.header-content {
-  padding: 15vh 20px;
-}
-
-/* Page Header */
-
-.page-container {
-  /* This is the logo height + the nav bar's padding */
-  padding-top: 17vh;
-  display: flex;
-  flex-direction: column;
-}
-
-.page-content {
-  max-width: 800px;
-  padding: 0 20px;
-  margin: 0 auto;
-  background-color: white;
-  text-align: start;
-}
-
-@media screen and (min-width: 800px) {
-  .page-content {
-    min-width: 800px;
-  }
-}
-
-.full-width-header {
-  position: relative;
-  width: 100%;
-  height: auto;
-  overflow: hidden;
-}
-
-.full-width-header .image-wrapper {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-}
-
-.full-width-header img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  object-position: center;
-}
-
-.full-width-header .overlay {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  opacity: 0.8;
-  /* Fixed opacity for transparency */
-}
-
-.full-width-header .header-content h1 {
-  color: white;
-  text-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
-  margin-top: 0;
-}
-
-/* Footer */
-
-.footer {
-  background-color: var(--pri-col);
-  color: white;
-  padding: 20px 0;
-}
-
-.footer-menu {
-  display: flex;
-  justify-content: center;
-}
-
-.footer-menu-items {
-  list-style: none;
-  margin: 0;
-  padding: 0;
-}
-
-.footer-menu-items li {
-  display: inline-block;
-  margin: 0 10px;
-}
-
-.footer-menu-items li a {
-  color: white;
-}
-
-.footer-menu-items li ul {
-  display: flex;
-  flex-direction: column;
-  padding: 0;
-  margin: 0;
-}
-
-.footer-menu-items li ul a {
-  font-weight: 200;
-}
-
-.logos {
-  margin-top: 20px;
-  display: flex;
-  justify-content: center;
-  gap: 20px;
-}
-
-.logos img {
-  height: 40px;
-}
-
-.copyright {
-  margin-top: 20px;
-  font-size: smaller;
 }
