--- a/style.css
+++ b/style.css
@@ -2,9 +2,9 @@
 Theme Name: King's Church Guildford
 Author: Sam Sarjudeen
 Author URI: https://sarj.uk/
-Description: The Wordpress theme built for King's Church Guildford
+Description: The WordPress theme built for King's Church Guildford
 Tags:
-Version: 1
+Version: 1.1.0
 Requires at least: 6.6
 Tested up to: 6.6
 License: GNU General Public License v2 or later
