--- a/templates/index.html
+++ b/templates/index.html
@@ -1,3 +1,8 @@
 <!-- wp:template-part {"slug":"header"} /-->
-<!-- wp:post-content /-->
+
+<main class="content-padding">
+    <!-- Post Content Block -->
+    <!-- wp:post-content /-->
+</main>
+
 <!-- wp:template-part {"slug":"footer"} /-->
