--- a/templates/page.html
+++ b/templates/page.html
@@ -1,8 +1,9 @@
-<!-- wp:template-part {"slug":"header"} /-->
+<!-- wp:template-part {"slug":"header","theme":"kcg-wp-theme-1.3.0"} /-->
 
-<main class="content-padding">
-    <!-- Post Content Block -->
-    <!-- wp:post-content /-->
-</main>
+<!-- wp:group {"style":{"dimensions":{"minHeight":"17vh"},"color":{"background":"#ffffff"}},"layout":{"type":"constrained"}} -->
+<div class="wp-block-group has-background" style="background-color:#ffffff;min-height:17vh"></div>
+<!-- /wp:group -->
 
-<!-- wp:template-part {"slug":"footer"} /-->
+<!-- wp:post-content /-->
+
+<!-- wp:template-part {"slug":"footer","theme":"kcg-wp-theme-1.3.0"} /-->
