--- a/templates/front-page.html
+++ b/templates/front-page.html
@@ -1,10 +1,11 @@
-<!-- wp:template-part {"slug":"header"} /-->
+<!-- wp:template-part {"slug":"header","tagName":"header"} /-->
+
 <svg class="divider" viewBox="0 0 100 100" preserveAspectRatio="none" xmlns="http://www.w3.org/2000/svg">
   <polygon class="divider-light" points="100,90 0,40 0,200 100,200" fill="red" />
   <polygon class="divider-primary" points="0,80 100,25 100,200 0,200" fill="green" />
   <polygon class="divider-secondary" points="0,100 100,45 100,200 0,200" fill="blue" />
 </svg>
-<!-- Post Content Block -->
-<!-- wp:post-content /-->
 
-<!-- wp:template-part {"slug":"footer"} /-->
+<!-- wp:post-content /-->
+ 
+<!-- wp:template-part {"slug":"footer","tagName":"footer"} /-->
