--- a/assets/css/menu.css
+++ b/assets/css/menu.css
@@ -1,13 +1,59 @@
-.wp-block-navigation__submenu-container {
-  min-width: unset !important;
+.wp-block-navigation {
+  position: relative;
+  --navigation-layout-justification-setting: flex-end;
+  --navigation-layout-direction: row;
+  --navigation-layout-wrap: wrap;
+  --navigation-layout-justify: flex-end;
+  --navigation-layout-align: center;
 }
 
-.wp-block-navigation__submenu-container li,
-.wp-block-navigation-submenu li {
-  width: 100%;
-}
+@media screen and (max-width: 600px) {
 
-.wp-block-navigation__submenu-container li *,
-.wp-block-navigation-submenu li * {
-  white-space: nowrap;
+  .wp-block-navigation__responsive-container.has-modal-open.is-menu-open {
+    position: fixed;
+    inset: 0;
+    z-index: 9999;
+    background-color: var(--wp--preset--color--primary);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 2rem;
+    overflow-y: auto;
+  }
+
+  .wp-block-navigation__responsive-container.has-modal-open.is-menu-open .wp-block-navigation__responsive-container-content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 0.5rem;
+    width: 100%;
+  }
+
+  .wp-block-navigation__responsive-container.has-modal-open.is-menu-open .wp-block-navigation__container {
+    padding: 0;
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    align-items: center;
+    text-align: center;
+  }
+
+  .wp-block-navigation__responsive-container.has-modal-open.is-menu-open .wp-block-navigation__container .wp-block-navigation-item {
+    align-items: center;
+    font-size: 1.25rem;
+  }
+
+  .wp-block-navigation__responsive-container.has-modal-open.is-menu-open .wp-block-navigation__container .wp-block-navigation-item.has-child {
+    gap: 0.25rem;
+  }
+
+  .wp-block-navigation__responsive-container.has-modal-open.is-menu-open .wp-block-navigation__container .wp-block-navigation-item.has-child .wp-block-navigation-submenu {
+    padding: 0;
+  }
+
+  .wp-block-navigation__responsive-container.has-modal-open.is-menu-open .wp-block-navigation__container .wp-block-navigation-item.has-child .wp-block-navigation-submenu li {
+    font-size: 1rem;
+  }
+
 }
